[add]バイナリ形式のファイル読み込みに対応

--- a/gui.properties
+++ b/gui.properties
@@ -1,5 +1,6 @@
 #
-#Mon Jul 08 02:09:33 JST 2019
-recentlyUsedFiles01=C\:\\Users\\owner\\workspace3\\anyfile-viewer\\testdata\\test2.txt
-recentlyUsedFiles00=C\:\\Users\\owner\\workspace3\\anyfile-viewer\\testdata\\test.txt
+#Wed Jul 10 23:26:04 JST 2019
+recentlyUsedFiles02=C\:\\Users\\owner\\workspace3\\anyfile-viewer\\testdata\\test.txt
+recentlyUsedFiles01=C\:\\Users\\owner\\workspace3\\anyfile-viewer\\testdata\\fixed.txt
+recentlyUsedFiles00=C\:\\Users\\owner\\workspace3\\anyfile-viewer\\testdata\\test2.txt
 extendedFilterEnabled=true
