--- a/testdata/fileDefinitions/filedefTest.properties
+++ b/testdata/fileDefinitions/filedefTest.properties
@@ -1,20 +1,28 @@
 #
 fileType0001.name = 電文ログファイル
-fileType0001.reader = HexDumpLinesReader
+fileType0001.readerClass = com.github.poodleone.anyfileviewer.reader.HexDumpLinesReader
 fileType0001.charset = UTF-8
 fileType0001.listItems = DATETIME,SR,ITEM1,ITEM2,ITEM3
 fileType0001.recordPattern = (?<DATETIME>[0-9]{4}-[0-9]{2}-[0-9]{2}\\s[0-9]{2}:[0-9]{2}:[0-9]{2}(?:\\.[0-9]+)?)\\s+(?<SR>SEND|RECV)\\s+(?<DUMP>.*)
 fileType0001.dumpLayouts = type1, type2
 
 fileType0002.name = CSVファイル
-fileType0002.reader = CsvLinesReader
+fileType0002.readerClass = com.github.poodleone.anyfileviewer.reader.CsvLinesReader
 fileType0002.charset = UTF-8
 fileType0002.listItems = DATETIME,SR,DUMP
 
-reader0001.name = HexDumpLinesReader
-reader0001.class = com.github.poodleone.anyfileviewer.reader.HexDumpLinesReader
+fileType0003.name = 固定長バイナリファイル
+fileType0003.readerClass = com.github.poodleone.anyfileviewer.reader.FixedBytesReader
+fileType0003.recordSize = 10
+fileType0003.dumpLayouts = type1, type2
+fileType0003.listItems = ITEM1,ITEM2,ITEM3
 
-reader0002.name = CsvLinesReader
-reader0002.class = com.github.poodleone.anyfileviewer.reader.CsvLinesReader
+fileType0004.name = 可変長バイナリファイル
+fileType0004.readerClass = com.github.poodleone.anyfileviewer.reader.VariableBytesReader
+fileType0004.readProcess = \
+  bytes = java.lang.reflect.Array.newInstance(java.lang.Byte.TYPE, 10); \
+  if (inputStream.read(bytes) == 10) { bytes } else { null }
+fileType0004.dumpLayouts = type1, type2
+fileType0004.listItems = ITEM1,ITEM2,ITEM3
 
 dataGroupFormats.dir = def
