[update]式で評価されるメタデータの評価タイミングをレコードパース後に変更

--- a/testdata/fileDefinitions/filedefTest.properties
+++ b/testdata/fileDefinitions/filedefTest.properties
@@ -8,8 +8,8 @@ fileType0001.charset = UTF-8
 fileType0001.listItems = DATETIME,SR,Part1.ITEM1,Part1.Sub1.ITEM1,Part1.Sub1.ITEM2,Part1.Sub1.ITEM3
 fileType0001.recordPattern = (?<DATETIME>[0-9]{4}-[0-9]{2}-[0-9]{2}\\s[0-9]{2}:[0-9]{2}:[0-9]{2}(?:\\.[0-9]+)?)\\s+(?<SR>SEND|RECV)\\s+(?<DUMP>.*)
 fileType0001.dumpLayouts = type1, type2
-fileType0001.itemExpression.テスト項目1 = testFunc()
-fileType0001.itemExpression.テスト項目2 = "xxx"
+fileType0001.metaItemExpression.テスト項目1 = testFunc()
+fileType0001.metaItemExpression.テスト項目2 = "xxx"
 
 fileType0002.name = CSVファイル
 fileType0002.readerClass = com.github.poodleone.anyfileviewer.reader.CsvLinesReader
