[add]内部処理用の項目を定義できる機能を追加

--- a/testdata/def/type1.properties
+++ b/testdata/def/type1.properties
@@ -1,5 +1,7 @@
 name = Part1
 #condition = 
 
+item0000 = hidden, HIDDEN1, "'xxxxx'"
+
 item0010 = string, ITEM1, ms932, 1
 item0020 = group, type1sub1
