--- a/testdata/fileDefinitions/filedefTest.properties
+++ b/testdata/fileDefinitions/filedefTest.properties
@@ -9,7 +9,7 @@ fileType0001.listItems = DATETIME,SR,Part1.ITEM1,Part1.Sub1.ITEM1,Part1.Sub1.ITE
 fileType0001.recordPattern = (?<DATETIME>[0-9]{4}-[0-9]{2}-[0-9]{2}\\s[0-9]{2}:[0-9]{2}:[0-9]{2}(?:\\.[0-9]+)?)\\s+(?<SR>SEND|RECV)\\s+(?<DUMP>.*)
 fileType0001.dumpLayouts = type1, type2
 fileType0001.metaItemExpression.テスト項目1 = testFunc()
-fileType0001.metaItemExpression.テスト項目2 = "xxx"
+fileType0001.metaItemExpression.テスト項目2 = $("HIDDEN1")
 
 fileType0002.name = CSVファイル
 fileType0002.readerClass = com.github.poodleone.anyfileviewer.reader.CsvLinesReader
